--- a/sales.html
+++ b/sales.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sales page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
+        <h1>Sales in citys</h1>
+     <div>
+        <h2> SEATTLE </h2> 
+        <ul id="Seattle"></ul> 
+     </div>
+
+
+     <div>
+        <h2>TOKYA</h2>
+        <ul id="Tokyo"></ul>
+     </div> 
+
+
+     <div>
+        <h2>DUBAI</h2>
+        <ul id="Dubai"></ul>
+     </div> 
+
+
+
+     <div>
+        <h2>PARIS</h2>
+        <ul id="Paris"></ul>
+     </div>
+
+     <div>
+        <h2>LIMA</h2>
+        <ul id="Lima"></ul>
+     </div>
+
+
+    
+    <script src="js/app.js"></script>
 </body>
 </html>
