--- a/sales.html
+++ b/sales.html
@@ -18,31 +18,15 @@
 
 
 <body> 
-    <table id="cookie-stand"> </table>
-       
-        <thead>
-           <tr>
-            <th>totales</th>  
-            <th>6am</th>
-            <th>7am</th>
-            <th>8am</th>
-            <th>9am</th>
-            <th>10am</th>
-            <th>11am</th>
-            <th>12pm</th>
-            <th>1pm</th>
-            <th>2pm</th>
-            <th>3pm</th>
-            <th>4pm</th>
-            <th>5pm</th>
-            <th>6pm</th>
-            <th>7pm</th>
+    <table id="table1"> 
 
-           </tr>
-        </thead>
+
 
     </table>
+       
+<footer>
 
+</footer>
     <script src="js/app.js"></script>
 </body>
 </html>
