i think its done

--- a/sales.html
+++ b/sales.html
@@ -18,12 +18,31 @@
 
 
 <body> 
+    
+    <center>  
+    <form id="newStore">
+        <fieldset>
+             <label>Store Name</label> <br>
+             <input id='name' type="text" placeholder='provide store Name' required/> <br>
+             <label>Min. Customers per Hour </label> <br>
+             <input id='min' type="number"  placeholder='1'required /> <br>
+             <label>Max.Customers per Hour </label> <br>
+             <input id='max' type="number" Placeholder='1000'required/> <br>
+             <label>Avg Number of Cookies</label> <br>
+             <input id='avg' type="number" placeholder='number'required/> <br>
+             <button type='submit' value='sumbit'>cookie Me </button><br>
+
+           </fieldset>
+       </form>       
+
+ 
     <table id="table1"> 
+</table>         
 
-
-
-    </table>
+</center>
        
+    <br>
+
 <footer>
 
 </footer>
