some changes , done

--- a/sales.html
+++ b/sales.html
@@ -10,8 +10,8 @@
 </head>
 <header>
     <center>
-        <img src="img/salmon.png" width="400" length ='400'> 
-        <h1>Sales in citys</h1>
+        <img class="swing"src="img/salmon.png" width="400" length ='400'> 
+        <h1>THE SALES </h1>
     </center>
     
 </header>
@@ -38,6 +38,7 @@
  
     <table id="table1"> 
 </table>         
+<h5><a href="index.html" style="color: #3B2215">Home</a></h5>
 
 </center>
        
