--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 
 			<div class="footer-right">
 
-				<a href="#"><i></i></a>
-				<a href="#"></i></a>
-				<a href="#"><i ></i></a>
-				<a href="#"><i></i></a>
+				<a href="#"><img src="img/2.jpg" width="40" height="40"> </a>
+				<a href="#"> <img src="img/2.jpg" width="40" height="40">   </a>
+				<a href="#"> <img src="img/2.jpg" width="40" height="40">   </a>
+				<a href="#"><img src="img/2.jpg" width="40" height="40"> </a>
 
 			</div>
 
@@ -105,9 +105,9 @@
 
 					<a href="sales.html">Sales</a>
 
-					<a >About</a>
+					<a  href="">About</a>
 
-					<a >Contact</a>
+					<a  href="">Contact</a>
 				</p>
 
 				<p>Salmon Cookie &copy; 2021</p>
