--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
 
 <main>
 
+
     <div id = "locationstitle">
       <h5 id ="box">All locations are open Saturday - Thursday from 6am - 8pm.</h5> </div>
       <img id="fishies" class="swing" src="img/fish.jpg" alt="fishies" width="250" height="300">
       <div>
         <h5>🍪 our locations info : </h5>
       <ul>
-        <li><ins><b>Seattle</b></ins><br />920  Terra Street<br />206-920-9260</li><br>
+        <li><b>Seattle</b></ins><br />920  Terra Street<br />206-920-9260</li><br>
 
 
-        <li><ins><b>Tokyo</b></ins><br />トウキョウト, ヒガシクルメシ, ヤヨイ, 143-1147 <br/>+8156-085-4919</li><br>
+        <li><b>Tokyo</b><br />トウキョウト, ヒガシクルメシ, ヤヨイ, 143-1147 <br/>+8156-085-4919</li><br>
 
-        <li><ins><b>Dubai</b></ins><br />Dubai Mall<br/>2265121</li><br>
+        <li><b>Dubai</b><br />Dubai Mall<br/>2265121</li><br>
 
-        <li><ins><b>Paris</b></ins><br />96  rue La Boétie<br />01.20.04.19080</li><br>
+        <li><b>Paris</b><br />96  rue La Boétie<br />01.20.04.19080</li><br>
 
-        <li><ins><b>Lima</b></ins><br />oswaldo hercelles 285 - santa catalina<br />1 5822794</li><br>
+        <li><b>Lima</b><br />oswaldo hercelles 285 - santa catalina<br />1 5822794</li><br>
       </ul>
      
   </div>
