--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id = "locationstitle">
       <h5 id ="box">All locations are open Saturday - Thursday from 6am - 8pm.</h5> </div>
-      <img id="fishies" class="swing" src="img/fish.jpg" alt="fishies" width="250" height="300">
+      <img id="fishies"  src="img/fish.jpg" alt="fishies" width="250" height="300">
       <div>
         <h5>🍪 our locations info : </h5>
       <ul>
