--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,7 @@
 </head>
 <header>
     <center>
-        <img class="swing"src="img/salmon.png" width="400" length ='400'> 
+        <img src="img/salmon.png" width="400" length ='400'> 
         <h1>THE SALES </h1>
     </center>
     
